Edited Chapter 8. Expanded Codex. Glossed Ark Species.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
 <section id="updates">
     <h2>Updates</h2>
     <div class="timeline-item">
+        <div class="timeline-date">4/8/25</div>
+        <div class="timeline-content">
+            Completed Introduction and Workshop sections of Chapter 8: Industry. Glossed Ark Species. Expanded Qereti Codex.
+        </div>
+    </div>
+    <div class="timeline-item">
+        <div class="timeline-date">4/8/25</div>
+        <div class="timeline-content">
+            Completed Chapter 7: Revolution. Began Chapter 8: Industry. Glossed Ark Species. Expanded Qereti Codex.
+        </div>
+    </div>
+    <div class="timeline-item">
         <div class="timeline-date">4/6/25</div>
         <div class="timeline-content">
             Completed the Technologists section in Chapter 7: Revolution. Glossed Ark Species. Expanded Qereti Codex. Added Netusha to Maps.
