--- a/qereti-codex.html
+++ b/qereti-codex.html
@@ -257,6 +257,10 @@
 
         <h3><u>Sites</u></h3>
 
+            <p id="cavernsofqeret-entry"></p><p><b>Caverns of Qeret</b></p>
+            <p><u>Sector:</u> N/A<br>
+            <u>Description:</u> Hidden beneath the island of Qeret lies a vast network of caverns. Though originally formed by natural geological processes, much of the system has been expanded and rendered navigable through the strategic use of Ark technology, including the burrowing of halls and purging of floodwaters. Today, the caverns serve as a shadow city beneath the city, where clandestine factions such as the Unfettered, the Pirate League, and the Puissant maintain secret strongholds. Though many of the Caverns' highest levels are mapped, it is said that something monstrous nests in its deepest reaches, beyond the limits of any known chart.</p>
+        
             <p id="grandtempleofnasiru-entry"></p><p><b>Grand Temple of Nasiru</b></p>
             <p><u>Sector:</u> N/A<br>
             <u>Description:</u> A massive black marble temple on the Lesser Qereti Isle, stewarded by the primarily ichor, Priests of Nasiru.</p>
@@ -268,6 +272,10 @@
             <p id="nonagon-entry"></p><p><b>The Nonagon</b></p>
             <p><u>Sector:</u> N/A<br>
             <u>Description:</u> Positioned in the heart of Qeret, the Nonagon is Qeret’s official city center and primary market. Shaped as a nine-sided polygon, it is separated into nine slices that adjoin and correspond to the nine sectors of the city.</p>
+
+            <p id="workshop-entry"></p><p><b>Workshop</b></p>
+            <p><u>Sector:</u> Ark Sector<br>
+            <u>Description:</u> The Workshop is the Institute’s principal research facility and the city's primary Ark factory, producing essential devices such as prompters, Ark tablets, and servitors. Under the permissive guidance of senior researcher Nadaba, it serves as a center of bold experimentation.</p>
 
         <section id="npcs"></section>
             <h2>NPCs</h2>
@@ -370,6 +378,18 @@
             <u>Faction:</u> Admiralty<br>
             <u>Description:</u> An affable, yet fastidious bureaucrat tasked with overseeing the daily administration of the Admiralty. Though devoid of martial inclination, Shemen’s talent for ledgers, scheduling, and procedural enforcement makes him indispensable to Admiral Gal’s logistical apparatus. He has no particular interest in justice, warfare, or punishment, but maintains an unshakable commitment to order and stability. Pirates, in his view, are more than criminals — they are existential disruptors of civic routine. Their greatest offense, he often notes, is not theft, but impropriety.<br>
             <u>Motivation:</u> To preserve the Admiralty’s bureaucratic efficiency and ensure that Qeret’s trade networks function without disruption or indecorum. Privately, Shemen harbors grander ambitions: he hopes his reputation for administrative excellence might one day earn him a coveted court appointment in the rival city of Taath, where order is prized as highly as loyalty.</p>
+
+            <p id="tanibaal-entry"></p><p><b>Tanibaal</b></p>
+            <p><u>Species:</u> Promethean<br>
+            <u>Faction:</u> Ark Sodality; Unfettered<br>
+            <u>Description:</u> A jovial and disarming figure within the Ark Sodality who secured his influence among the Promethean community through goodwill, generous patronage, and by hosting bi-monthly orgies. Tanibaal conceals his subversive ideals behind bouts of raucous laughter and conspicuous drinking. While most regard him as a harmless (if a bit lecherous) drunk, he is a committed member of the Unfettered, working quietly to undermine the Sodality’s influence over the Institute. His lumpy skin, stained with splashes of errant violet beer, and his clumsy wobbling gait make him a familiar, if underestimated, presence in the Ark Sector.<br>
+            <u>Motivation:</u> Tanibaal seeks to discretely dismantle hierarchical structures wherever he finds them, believing that institutions like the Sodality, however benevolent they appear, inevitably corrupt creative and intellectual freedom. His allegiance to the Unfettered stems from a desire to see a Qeret where knowledge, innovation, and art flourish without interference or control.</p>
+
+            <p id="tizdor-entry"></p><p><b>Tizdor</b></p>
+            <p><u>Species:</u> Vytrim<br>
+            <u>Faction:</u> Qereti Court<br>
+            <u>Description:</u> Tizdor serves as one of the Qereti Court’s official scientists, known for his brash demeanor, monosyllabic exchanges, and general contempt for the idle aristocracy. A product of the Institute’s most demanding programs, Tizdor is a brilliant if impatient intellect who prefers the company of his fellow court scientist, Gill, over any other. His crystal brain, often flickering with restless blue light, reflects a mind perpetually agitated by the inefficiencies and pretensions of court life.<br>
+            <u>Motivation:</u> Tizdor seeks to advance scientific inquiry within the Qereti Court, though his disdain for politics and courtly decorum often undercuts his influence. He dreams of a Qeret guided by reason rather than sycophancy but begrudgingly endures his appointment as the price of influence.</p>
 
             <p id="trys-entry"></p><p><b>Trys</b></p>
             <p><u>Species:</u> Promethean<br>
