--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
 <section id="updates">
     <h2>Updates</h2>
     <div class="timeline-item">
-        <div class="timeline-date">4/8/25</div>
+        <div class="timeline-date">4/24/25</div>
+        <div class="timeline-content">
+            Completed Dyeing and Trader's Guild sections of Chapter 8: Industry.
+        </div>
+    </div>
+    <div class="timeline-item">
+        <div class="timeline-date">4/10/25</div>
         <div class="timeline-content">
             Completed Introduction and Workshop sections of Chapter 8: Industry. Glossed Ark Species. Expanded Qereti Codex.
         </div>
