Edit Textiles in Industry. Expand codex.

--- a/qereti-codex.html
+++ b/qereti-codex.html
@@ -201,9 +201,19 @@
 
             <p><i>Netush is inspired by the ancient Hittite city of Hattusa. </i></p>
 
-            <p id="netusha-entry"></p><p><b>Netusha/Netushans:</b> One of Kassatím’s six great kingdoms. Once exceptionally militaristic and renowned for its involvement in numerous historical conflicts, including a famous clash over Qeret with Léu, it now thrives under Zet, an Ichor King (and first Ark Alien leader of a Great Kingdom) who promotes peace, piety, and measured technological advancement. Netusha operates as a theocratic absolute monarchy, with power centralized under Zet and the priesthoods of Netusha. Its capital is Netush, located at the southern reaches of the Zulpaharunna Sea. </p>
+            <p id="netusha-entry"></p><p><b>Netusha/Netushans:</b> One of Kassatím’s six great kingdoms. Once exceptionally militaristic and renowned for its involvement in numerous historical conflicts, including a famous clash over Qeret with Léu, it now thrives under Zet, an Ichor King (and first Ark Alien leader of a Great Kingdom) who promotes peace, piety, and measured technological advancement. Netusha operates as a theocratic absolute monarchy, with power centralized under Zet and the priesthoods of Netusha. Its capital is Netush, located at the southern reaches of the Zulpaharunna Sea.</p>
 
             <p><i>Netusha and the Netushans are inspired by Hatti and the ancient Hittites. </i></p>
+
+            <p id="qeret-entry"></p><p><b>Qeret/Qereti:</b> A sprawling and cosmopolitan city of the Cerulean, Qeret encompasses the Qereti Isles that lie along the western littoral of the Adonian Mainland. Renowned for its prosperity and dominant trade networks, it serves as a crucial nexus for commerce between the Great Kingdoms. Though a vassal of Combassyia, the Qereti people maintain a distinct Adonian cultural identity. And despite periodic attempts by Combassyia to tighten its grip, Qeret’s naval strength and economic significance afford it a certain degree of autonomy.</p>
+
+            <p><i>Qeret is inspired by the ancient Phoenician city of Tyre.</i></p>
+
+            <p id="qereti-isle-greater-entry"></p><p><b>Qereti Isle, Greater:</b> The northward island of the Qereti Isles. The vast majority of Qeret’s population and infrastructure resides here. </p>
+
+            <p id="qereti-isle-lesser-entry"></p><p><b>Qereti Isle, Lesser:</b> The southward island of the Qereti Isles. Its primary point of interest is the Grand Temple of Nasiru, though it is also home to numerous attendant structures.</p>
+
+            <p id="qereti-strait-entry"></p><p><b>Qereti Strait:</b> A narrow channel separating the Qereti Isles from the Bamati Plains of Mainland Adoniah. Its waters serve as a vital artery for trade and travel, linking Qeret with the broader markets of Adoniah, Makaria, and Combassyia. Frequently patrolled by Admiralty ships, the strait’s calm waters serve as commercial hub and strategic chokepoint.</p>
 
             <p id="taath-entry"></p><p><b>Taath:</b> The illustrious daughter city of Qeret, Taath holds the distinction of being the first Adonian colony. Though politically aligned with Léu, it maintains an intense, occasionally volatile bond with Qeret. It has been ruled for centuries by the long-lived and beloved Queen Yilta, who is venerated as a living goddess.</p>
 
@@ -415,7 +425,7 @@
             <p><u>Species:</u> Acumine<br>
             <u>Faction:</u> Qereti Court<br>
             <u>Description:</u> An acumine resident of the Royal Palace, Zygo has secured his position in the Qereti Court through sharp wit and undeniable charm. The King delights in his biting barbs and the subtle political satires woven into his entertaining stories. Zygo always dons the latest Qereti fashions, albeit deliberately shredded — perhaps envisioning himself a tattered reflection of the culture he inhabits. His chief rival at court is Kelqart the Importunate, a beloved singer-poet.<br>
-            <u>Motivation:</u> Zygo lives for simple pleasures. He revels in his station at court and will stop at nothing to preserve it. However, behind closed doors, he indulges in procuring and torturing slaves — a pastime that, if exposed, could lead to disgrace and his ejection from the palace.</p>
+            <u>Motivation:</u> Zygo lives for simple pleasures. He revels in his station at court and will stop at nothing to preserve it. However, behind closed doors, he indulges in procuring and torturing slaves — a pastime that, if exposed, could lead to disgrace and his swift ejection from the palace.</p>
 
         <section id="science-technology"></section>
             <h2>Science & Technology</h2>
