--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
 <section id="updates">
     <h2>Updates</h2>
     <div class="timeline-item">
+        <div class="timeline-date">5/12/25</div>
+        <div class="timeline-content">
+            Completed the Textile section of Chapter 8: Industry. Glossed Ark Species. Expanded Qereti Codex.
+        </div>
+    </div>
+    <div class="timeline-item">
         <div class="timeline-date">5/10/25</div>
         <div class="timeline-content">
             Completed the Shipyard section of Chapter 8: Industry. Glossed Ark Species. Expanded Qereti Codex.
