Integrate scaffold for new project: Return to Mycenae

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
     <p>Below is a list of the projects hosted here. For general summaries and context please visit <a href="projects.html">Projects</a>:</p>
     <ul class="triangle-list"> 
         <li><a href="qeret.html"><i>Qeret: A City Module</i></a></li>
-        <li><a href="endless-summer.html"><i>Endless Summer</i></a></li>
         <li><a href="Imera-age-of-brilliance.html"><i>Imera: Age of Brilliance</i></a></li>
+        <li><a href="return-to-mycenae.html">Return to Mycenae</a></li>
+        <li><a href="endless-summer.html"><i>Endless Summer</i></a></li>
         <li><a href="song-of-kali-dari.html"><i>A Song for Kali-Dari</i></a></li>
     </ul>
         </section>
@@ -65,6 +66,12 @@
         
 <section id="updates">
     <h2>Updates</h2>
+    <div class="timeline-item">
+        <div class="timeline-date">5/28/25</div>
+        <div class="timeline-content">
+            Began integrating new project: <i>Return to Mycenae</i>. Further updates forthcoming.
+        </div>
+    </div>
     <div class="timeline-item">
         <div class="timeline-date">5/12/25</div>
         <div class="timeline-content">
