--- a/qeret.html
+++ b/qeret.html
@@ -37,7 +37,7 @@
 
         <section id="chapters">
             <h2>Table of Contents</h2>
-            <ul class="triangle-list"> <!-- Add the triangle-list class -->
+            <ul class="triangle-list"> 
                 <li><a href="chapter1-introduction.html">Chapter 1: Introduction [Complete]</a></li>
                 <li><a href="chapter2-history.html">Chapter 2: History [Complete]</a></li>
                 <li><a href="chapter3-culture.html">Chapter 3: Culture & People [Complete]</a></a></li>
