Edit RtM documentation. Expand Qereti Codex.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
 <section id="updates">
     <h2>Updates</h2>
     <div class="timeline-item">
+        <div class="timeline-date">5/30/25</div>
+        <div class="timeline-content">
+            Continued editing <i>Return to Mycenae</i> documentation. Will begin integrating soon. Glossed Ark Species. Expanded Qereti Codex.
+        </div>
+    </div>
+    <div class="timeline-item">
         <div class="timeline-date">5/28/25</div>
         <div class="timeline-content">
             Began integrating new project: <i>Return to Mycenae</i>. Further updates forthcoming.
