--- a/qereti-codex.html
+++ b/qereti-codex.html
@@ -277,13 +277,17 @@
             <p><u>Sector:</u> N/A<br>
             <u>Description:</u> A massive black marble temple on the Lesser Qereti Isle, stewarded by the primarily ichor, Priests of Nasiru.</p>
 
-            <p id="resurrectiontemple-entry"></p><p><b>Resurrection Temple</b></p>
-            <p><u>Sector:</u> Ark Sector<br>
-            <u>Description:</u> A medical facility operated by doctor-priests (mostly ichor) that worship Kelqart, Adonian god of healing and wind. They employ Dust to provide antisenescence, renewal, and resurrection treatments to the public.</p>
-
             <p id="nonagon-entry"></p><p><b>The Nonagon</b></p>
             <p><u>Sector:</u> N/A<br>
             <u>Description:</u> Positioned in the heart of Qeret, the Nonagon is Qeret’s official city center and primary market. Shaped as a nine-sided polygon, it is separated into nine slices that adjoin and correspond to the nine sectors of the city.</p>
+
+            <p id="public-gardens-entry"></p><p><b>Public Gardens</b></p>
+            <p><u>Sector:</u> N/A<br>
+            <u>Description:</u> A vast cultivated reserve along the northwestern edge of the Greater Qereti Isle, the Public Gardens interweave native and Ark flora in an unstructured, pathless sprawl. Visitors navigate by memory, encountering singular biomes such as the narcotic-rich Loafer’s Park, the towering violet canopy of the Sky Tower Forest, and the responsive fungal glyphs of Crestform Grove. Other highlights include Tarpaulid Point’s surreal marine vistas and the glistening Torrent Field. Free-to-enter and unsupervised, the Gardens offer a rare fusion of public access, ecological spectacle, and drug-fueled disorientation.</p>
+
+            <p id="resurrectiontemple-entry"></p><p><b>Resurrection Temple</b></p>
+            <p><u>Sector:</u> Ark Sector<br>
+            <u>Description:</u> A medical facility operated by doctor-priests (mostly ichor) that worship Kelqart, Adonian god of healing and wind. They employ Dust to provide antisenescence, renewal, and resurrection treatments to the public.</p>
 
             <p id="workshop-entry"></p><p><b>Workshop</b></p>
             <p><u>Sector:</u> Ark Sector<br>
