Fix Triangle Bullet alignment. Intro and Setting to RtM.

--- a/return-to-mycenae.html
+++ b/return-to-mycenae.html
@@ -33,8 +33,8 @@
         </section>
         <section id="documents">
             <h2>Documents</h2>
-            <ul class="triangle-list">
-                <li>Game/Narrative Design Document - Return to Mycenae</li>
+            <ul class="triangle-list toc-triangle-list" style="padding-left: 1.5em;">
+                <li><a href="return-to-mycenae-gdd.html">Game Design Document - Return to Mycenae</a></li>
             </ul>
         </section>
         <!-- Add more sections/content as needed -->
