--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
         
 <section id="updates">
     <h2>Updates</h2>
+        <div class="timeline-item">
+        <div class="timeline-date">7/10/25</div>
+        <div class="timeline-content">
+            I have begun two rather ambitious projects that have taken up my time for the past month. That said, I will now resume bringing Returen to Mycenae to the portfolio. After that I will continue bringing more Qeret content to the portfolio while also editing these two new projects. Hopefully the portfolio will contain both of these projects by end of year.
+            <br>I have resolved a longstanding issue with custom bullet list alignment; I have edited and added the Introduction and Setting sections of Return to Mycenae.
+        </div>
+    </div>
     <div class="timeline-item">
         <div class="timeline-date">5/30/25</div>
         <div class="timeline-content">
