Edit narrative overview and prologue of RTM.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <ul class="triangle-list"> 
         <li><a href="qeret.html"><i>Qeret: A City Module</i></a></li>
         <li><a href="Imera-age-of-brilliance.html"><i>Imera: Age of Brilliance</i></a></li>
-        <li><a href="return-to-mycenae.html">Return to Mycenae</a></li>
+        <li><a href="return-to-mycenae.html"><i>Return to Mycenae</i></a></li>
         <li><a href="endless-summer.html"><i>Endless Summer</i></a></li>
         <li><a href="song-of-kali-dari.html"><i>A Song for Kali-Dari</i></a></li>
     </ul>
@@ -67,9 +67,15 @@
 <section id="updates">
     <h2>Updates</h2>
         <div class="timeline-item">
+        <div class="timeline-date">8/10/25</div>
+        <div class="timeline-content">
+            Edited and added Narrative Overview intro and Prologue section of <i>Return to Mycenae</i>.
+        </div>
+    </div>
+        <div class="timeline-item">
         <div class="timeline-date">7/10/25</div>
         <div class="timeline-content">
-            I have begun two rather ambitious projects that have taken up my time for the past month. That said, I will now resume bringing Returen to Mycenae to the portfolio. After that I will continue bringing more Qeret content to the portfolio while also editing these two new projects. Hopefully the portfolio will contain both of these projects by end of year.
+            I have begun two rather ambitious projects that have taken up my time for the past month. That said, I will now resume bringing Return to Mycenae to the portfolio. After that I will continue bringing more Qeret content to the portfolio while also editing these two new projects. Hopefully the portfolio will contain both of these projects by end of year.
             <br>I have resolved a longstanding issue with custom bullet list alignment; I have edited and added the Introduction and Setting sections of Return to Mycenae.
         </div>
     </div>
