--- a/return-to-mycenae-gdd.html
+++ b/return-to-mycenae-gdd.html
@@ -32,11 +32,11 @@
 
             <p><strong>Return to Mycenae</strong> is a role-playing game set in a world deeply rooted in Greek mythology and history, combining an intricately plotted narrative with strategically challenging combat systems. The game follows siblings <strong>Alexander</strong> and <strong>Isadora</strong>, rumored descendants of the last hero of the ancient <strong>Mycenaean Empire</strong> (<strong>Alexion</strong>), as they uncover the buried secrets of their bloodline and the remnants of that bygone civilization. Their journey spans the fractured realms of <strong>Pelagon</strong> – from the scholarly coasts of Ionia to the windswept plateaus of Aeolia, the mountain strongholds of Doria, and the pristine marble forums of Attia – ultimately leading to a fateful return through time to the lost city of <strong>Mycenae</strong>.</p>
         
-            <p>Inspired by classic SNES-era JRPGs—most notably <i>Final Fantasy IV</i>, <i>V</i>, and <i>VI</i> — <i>Return to Mycenae</i> seeks to capture the spirit of epic storytelling, memorable character-driven narratives, and the strategic, turn-based combat that defined the golden age of the genre.</p>
+            <p>Inspired by classic SNES-era JRPGs — most notably <i>Final Fantasy IV</i>, <i>V</i>, and <i>VI</i> — <i>Return to Mycenae</i> seeks to capture the spirit of epic storytelling, memorable character-driven narratives, and the strategic, turn-based combat that defined the golden age of the genre.</p>
 
             <p>Gameplay features an <strong>Action Pool System (APS)</strong> where the player’s party and enemies act in alternating team turns. Each team receives a limited pool of Actions at the start of its turn, and tactical decisions dynamically affect this pool: exploiting elemental weaknesses or landing critical hits can grant extra actions, while hitting resistances or other missteps can penalize the team by consuming additional actions. Combat is further deepened by a <strong>six-element Magic System</strong> interwoven with the APS mechanics and a flexible <strong>Badge System</strong> that lets players customize characters’ elemental affinities and abilities. The design emphasizes strategy and synergy. Players must intelligently leverage elemental affinities, craft suitable Badges, balance party aptitudes, manage scarce mana resource, and coordinate character skills to prevail in battle.</p>
 
-            <p><i>Return to Mycenae</i> is designed to deliver the gameplay depth of <i>Final Fantasy V</i>, encouraging experimentation, clever builds, and true mastery of its systems, while offering a narrative as thematically ambitious and emotionally resonant as <i>Final Fantasy VI</i>. It unfolds in a setting that is both unique and culturally familiar: a reimagined Aegean world where history, myth, magic, and the strange.</p>
+            <p><i>Return to Mycenae</i> is designed to deliver the gameplay depth of <i>Final Fantasy V</i>, encouraging experimentation, clever builds, and true mastery of its systems, while offering a narrative as thematically ambitious and emotionally resonant as <i>Final Fantasy VI</i>. It unfolds in a setting that is both unique and culturally familiar: a reimagined Aegean world where familar history, myth, and magic coelsce in strange and novel ways.</p>
         </section>
 
         <section id="setting-world">
@@ -59,11 +59,11 @@
 
         <section id="narrative-overview">
             <h2>Narrative Overview</h2>
-        </section>
-
-        <section id="story-structure">
-            <h2>Story Structure</h2>
+            <p>The narrative of <i>Return to Mycenae</i> is structured into a <strong>Prologue</strong> and <strong>five Acts</strong>, each tied to a region of Pelagon and a phase of the party’s journey. The tale follows Alexander and Isadora from an unremarkable village life to the threshold of legend, as they unearth the hidden legacy of Polydamas — the last Mycenaean king whose reign ended in betrayal — and confront enemies both mortal and divine, from the fractured city-states of the present to the long-absent deities known as the Myrion. These encounters will draw them into the veiled designs of the Gods, compel them to cross the boundaries of time, and pit them against the encroaching shadow of Nyx.</p>
             <h3 id="prologue">Prologue</h3>
+
+            <p>In the quiet village of <strong>Lysara</strong>, siblings Alexander and Isadora celebrate the spring festival of <i>Kleos Kairos</i> when the festival is shattered by an unexpected assault of twisted, armor-clad figures with an unsettling and inhuman cast descend upon the village, proclaiming themselves the <strong>"King's Acolytes."</strong> The siblings repel the initial assault. After the battle, <strong>Elder Callisthenes</strong> warns that the surviving creatures have fled north into the <strong>Ephyra Vale</strong>, toward ancient Mycenaean ruins hidden in the forested crags. Alexander and Isadora give chase through the treacherous vale, battling beasts and stray Acolytes, navigating the crumbling remnants of a bygone age. In the depths of the ruins, they confront <strong>Fireforged Kharon</strong>, an imposing monstrosity wreathed in malignant black flames. Upon defeating Kharon, they find a vast sigil scorched into the stone floor of its lair — <strong>the mark of Nyx, an ominous “Χ”</strong> whose meaning is as ancient as it is dire. This discovery sets them on a course that will unravel the truth of their bloodline, the lost Empire, and the fate of Pelagon itself.</p>
+
             <h3 id="act1">Act I: Ionia</h3>
             <h3 id="act2">Act II: Aeolia</h3>
             <h3 id="act3">Act III: Doria</h3>
