--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
         
 <section id="updates">
     <h2>Updates</h2>
+     <div class="timeline-item">
+        <div class="timeline-date">9/17/25</div>
+        <div class="timeline-content">
+            Edited and added Acts I, II, and III of <i>Return to Mycenae</i>.
+        </div>
+    </div>
         <div class="timeline-item">
         <div class="timeline-date">8/10/25</div>
         <div class="timeline-content">
