Edit Chapter 8. Expand Qereti Codex.

--- a/qereti-codex.html
+++ b/qereti-codex.html
@@ -289,6 +289,10 @@
             <p><u>Sector:</u> Ark Sector<br>
             <u>Description:</u> A medical facility operated by doctor-priests (mostly ichor) that worship Kelqart, Adonian god of healing and wind. They employ Dust to provide antisenescence, renewal, and resurrection treatments to the public.</p>
 
+            <p id="royalpalace-entry"></p><p><b>Royal Palace</b></p>
+            <p><u>Sector:</u> N/A<br>
+            <u>Description:</u> The Royal Palace crowns the northern edge of the Greater Qereti Isle. A vast complex of thinly veined white marble built without straight lines, its rounded halls and bubble-like masses flanked by twin basalt towers laced with violet and teal cybernetic weavings. Within, curved corridors, intaglio panels, and holo-loop installations lead to the Great Hall, six specialized international kitchens, extensive guest apartments, the Pantheonic Sanctuary in the East Tower, the Palace Laboratory in the West Tower, and the royal family’s private quarters in the highest spire. As the seat of the Qereti Court, it houses King Tiraal, Queen Meshmoon, their advisors, an army of courtiers, and the Combassyian contingent, embodying both Qeret’s native monarchy and, likewise, its subordination to Banipahl Byzes.</p>
+
             <p id="workshop-entry"></p><p><b>Workshop</b></p>
             <p><u>Sector:</u> Ark Sector<br>
             <u>Description:</u> The Workshop is the Institute’s principal research facility and the city's primary Ark factory, producing essential devices such as prompters, Ark tablets, and servitors. Under the permissive guidance of senior researcher Nadaba, it serves as a center of bold experimentation.</p>
