--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
 <section id="updates">
     <h2>Updates</h2>
      <div class="timeline-item">
+        <div class="timeline-date">11/8/25</div>
+        <div class="timeline-content">
+            Edited Slave Trade section of Chapter 8: Industry. Glossed Ark Species. Expanded Qereti Codex.
+        </div>
+    </div>
+    <div class="timeline-item">
         <div class="timeline-date">9/17/25</div>
         <div class="timeline-content">
             Edited and added Acts I, II, and III of <i>Return to Mycenae</i>.
