--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
      <div class="timeline-item">
         <div class="timeline-date">11/8/25</div>
         <div class="timeline-content">
-            Edited Slave Trade section of Chapter 8: Industry. Glossed Ark Species. Expanded Qereti Codex.
+            Edited Slave Trade section of Chapter 8: Industry. Glossed Ark Species. Expanded Qereti Codex.`
         </div>
     </div>
     <div class="timeline-item">
