Edit and Add Act V of RTM GDD

--- a/return-to-mycenae-gdd.html
+++ b/return-to-mycenae-gdd.html
@@ -82,19 +82,23 @@
         </p>
       </section>
 
+      <p>One Oracle, more perceptive and unsettling than the rest, quietly guides the siblings through veiled questions and half-revealed answers. Though unnamed, this figure steers them toward key insights about the sigil “Χ” and their lineage—an intervention later revealed to have been the work of <strong>Phanes</strong>, Unveiler of Truths, ensuring that the siblings grasp the knowledge necessary to pursue their fate.</p>
+
       <p>The Oracles also explain the cosmic dichotomy of <strong>Aither and Nyx — Light and Shadow</strong>. Aither is the domain of <strong>the Myrion</strong>, the gods; Nyx is darkness unbound, an extension of the abyss herself. During these revelations, Alexander and Isadora recruit <strong>Ianthe</strong>, a rogue air-mage, who joins the party with her knowledge of Aeolian magic. Together, they infiltrate the <strong>Skyclad Monastery</strong>, uncovering the rituals that bind prophecy to the wind and confronting its dangers. Their victory secures not only the Oracles’ truths but also an airship, granting them passage across the skies to <strong>Doria</strong>, the original home of Alexion, the Last Hero.</p>
 
             <p><b>Dungeon:</b> Skyclad Monastery</p>
 
             <h3 id="act3">Act III: Doria</h3>
 
-            <p>Alexander, Isadora, Ianthe, and Nereus travel by airship to the mountain realm of Doria, where strength and tradition define its people. They seek an audience with the <strong>Twin Kings, Nikandros and Timaios</strong>, hoping to uncover truths of Alexion, the Last Hero. Among the fortified citadels and stone-hewn halls, the siblings begin training in <strong>Gē</strong>, the earth-magic tradition of endurance and might.</p>
+            <p>Alexander, Isadora, Ianthe, and Nereus travel by airship to the mountain realm of Doria, where strength and tradition define its people. They seek an audience with the <strong>Twin Kings, Nikandros and Timaios</strong>, hoping to uncover truths surrounding Alexion, the Last Hero. Among the fortified citadels and stone-hewn halls, the siblings begin training in <strong>Gē</strong>, the earth-magic tradition of endurance and might. The party are guided towards the <strong>Tomb of Alexion</strong>, revered as the resting place of the Last Hero.</p>
 
-            <p>Their path leads them to the <strong>Tomb of Alexion</strong>, revered as the resting place of the Last Hero. Within its shadowed halls, the truth begins to surface: Alexion is the “True King” whom the King’s Acolytes serve. Once thought a savior, Alexion was in fact corrupted by Nyx, and his final living act was the usurpation and murder of Mycenaean King, Polydamas. </p>
+            <p>Before they can reach the tomb, the party encounters a severe and taciturn figure moving through Doria’s high passes: a veiled woman bearing the symbols of judgment and finality. Without naming herself, she warns them that some legacies are meant to end, not be unearthed, and that the past, once disturbed, demands a reckoning. Through subtle obstruction—collapsed routes, misdirection, and moments of uncanny ill fortune—she attempts to delay their progress. Only later will it become clear that this was the work of <strong>Atropos</strong>, Weaver of Destiny’s End, seeking to sever a time-bound fate before it can fully take hold.</p>
 
-            <p>At the tomb’s depths, the party faces the Acolyte champion, <strong>Stonebound Brontes</strong>, a hulking warrior fused with blackened rock and veins of Nyxian fire. In the brutal confrontation, Nereus is slain, sacrificing himself to protect the others. Though victorious, the battle leaves its mark: Alexander begins to exhibit unsettling signs of Nyxian corruption, hinting at a dangerous kinship with the power that claimed Alexion.</p>
+            <p>Undeterred, the party presses onward to the Tomb. Within its shadowed halls, the truth begins to surface: Alexion is the “True King” whom the King’s Acolytes serve. Once thought a savior, Alexion was in fact corrupted by Nyx, and his final living act was the usurpation and murder of Mycenaean King <strong>Polydamas</strong>.</p>
 
-            <p>This revelation binds the siblings’ fates more tightly to the enigma of Alexion and the sigil “Χ,” as the Acolytes grow bolder in their designs. The Oracles’ words echo with renewed urgency, and counsel from the Twin Kings points them eastward to <strong>Attia</strong>, where imperial archives may yet yield answers to stemming Nyx’s corruption.</p>
+            <p>At the tomb’s depths, the party faces the Acolyte champion <strong>Stonebound Brontes</strong>, a hulking warrior fused with blackened rock and veins of Nyxian fire. In the brutal confrontation, <strong>Nereus is slain</strong>, sacrificing himself to protect the others. Though victorious, the battle leaves its mark: Alexander begins to exhibit unsettling signs of Nyxian corruption, hinting at a dangerous kinship with the power that claimed Alexion.</p>
+
+            <p>This revelation binds the siblings’ fates more tightly to the enigma of Alexion and the sigil “Χ,” as the Acolytes grow bolder in their designs. Echoes of the Oracles’ warnings return with renewed urgency, and counsel from the Twin Kings points them eastward to Attia, where imperial archives may yet yield answers to stemming Nyx’s corruption.</p>
 
             <p><b>Dungeon:</b> Tomb of Alexion</p>
 
@@ -106,13 +110,44 @@
 
             <p>Clues uncovered in Attia instead point downward, to the <strong>Sanctum of the Kairostratum</strong>, a subterranean complex built around the ribcage of <strong>Kairos, god of Time</strong>. Descending into the Sanctum, the party enters the ribcage, known as the Kairostratum, beginning their passage through the tides of time. Within this temporal maelstrom they confront Kairos, who manifests to bar their crossing. Speaking only in oblique fragments, he alludes to having faced them across uncountable iterations and insists that their journey can only perpetuate the loop. The battle unfolds within the shifting currents of time, culminating in Kairos shattering into temporal fragments. His ribcage — the Kairostratum — hurtles backwards into the distant past (lodging itself within the Sanctum), even as the Kairostratum carrying the party continues its trajectory, creating the paradox of two Kairostrata existing simultaneously. Pressing onward, the party is cast five millennia back to the final days of Mycenae.</p>
             
+            <section class="section-box" id="good-ending">
+                <h3 class="centered-heading">Ending A</h3>
+                <p>
+                    At the threshold of the Kairostratum, Alexander and Isadora may choose not to enter the ribcage of Kairos and refuse the temptation to unmake the past. In that moment of restraint, the pull of Nyx abruptly loosens its hold. The Nyxian corruption afflicting Alexander dissipates, the fractures of the Sundering quietly mend, the King’s Acolytes vanish as if erased from history, and Alexion himself fades from the world, his paradox unraveled.
+                </p>
+
+                <p>After the credits, players may reload their save to pursue the alternate path: entering the Kairostratum and initiating the time loop that leads into Act V.</p>
+      </section>
+
             <p><b>Dungeons:</b> Mausoleum of King Polydamas; Sanctum of the Kairostratum</p>
             <h3 id="act5">Act V: Return to Mycenae</h3>
+
+            <p>Traveling through time via the Kairostratum, Alexander and Isadora arrive in the final days of the Mycenaean Empire. The city stands resplendent and whole, yet strained by civil unrest quietly fomented in secret: factional strife, manufactured shortages, and whispered dissent seeded by Alexion long before his open betrayal. Within the palace, the siblings encounter <strong>King Polydamas</strong>, the last ruler of Mycenae, and attempt to divert the catastrophe foretold by prophecy. Their presence, rather than averting fate, tightens its weave.</p>
+            <p>They soon witness Polydamas’s betrayal and murder at the hands of Alexion, celebrated as the Empire’s greatest hero. Alexion’s true nature is fully revealed: wielding the power of Nyx, he intends not merely to rule Mycenae, but to conquer all Pelagon and defy the Myrion themselves. <strong>Eirene</strong>, god of harmony, confronts Alexion in an attempt to mollify the blood-drunk usurper. She is brutally slain, her death marking the final rupture between gods and mortals.</p>
+            <p>As Alexion’s ritual unfolds, a deeper paradox comes to light. Alexion’s plan relies upon Alexander’s latent power, drawn across time to anchor the summoning of Nyx-Manifest: the living embodiment of darkness. In resisting Alexion, Alexander unwittingly fulfills the conditions that make the ritual possible. <strong>Atropos</strong>, Weaver of Destiny’s End, moves to halt Alexion herself and sever the loop at its source, yet falters at the final moment, unable to bring herself to end her son’s life. Resigned, she allows the fate she was sworn to cut to unfold once more, condemning herself to witness the cycle repeat. <strong>Phanes</strong>, Unveiler of Truths, stands witness, ensuring that the truth of this cycle is not undone. Helios confronts the party as an agent of divine order, judging the time-displaced siblings themselves to be the true destabilizing force. Believing that removing them from the timeline is the last remaining means of averting the Sundering, he moves to expel them by force. The party fights in self-defense, steadfast in their resolve to stop Alexion. Helios is defeated, withdrawing as the world slips beyond the his control.</p>
+            <p>The party confronts Alexion within the <strong>Arteries of Nyx</strong>, a spreading, transdimensional vascular lattice where Nyx’s influence bleeds through reality and entwines the city from within. As the battle turns and Nyx’s presence spills through the city, both <strong>Archimedes and Ianthe sacrifice themselves</strong> to keep the siblings alive and to carry the fight through its final, desperate phases. The siblings defeat Alexion, ending his coup, but too late to halt the summoning he has set in motion. From the darkness between space and time emerges <strong>Nyx-Manifest</strong>, whose arrival triggers the <strong>Great Sundering</strong>. Land, sea, and sky fracture as Pelagon is torn apart, and Alexander and Isadora bear witness to cataclysm as they perish in a maelstrom of Nyxian fire. </p>
+            <p></p>
+
+            <section class="section-box" id="bad-ending">
+                <h3 class="centered-heading">Ending B</h3>
+                <p>
+                    In the aftermath, the continent of Pelagon is shattered and civilization lies in ruin. In an epilogue, it is revealed that, years earlier, Phanes, Unveiler of Truths, secreted a bastard child of Alexion to the provincial village of Lysara, preserving Alexion's bloodline beyond the impending Sundering. From this hidden lineage are born Alexander and Isadora: heirs and harbingers of catastrophe. 
+                </p>
+
+                <p>The cycle begins anew; a new game begins. </p>
+      </section>
+
+      <p><b>Dungeons:</b> Mycenae Palace; Arteries of Nyx</p>
+
         </section>
 
         <section id="cast">
             <h2>Cast</h2>
             <h3 id="heroes">Heroes</h3>
+
+            <p><b>Alexander</b> - <i>Heir of Alexion, Warrior of Shadow</i><br>
+            <u>Role:</u></p> 
+
             <h3 id="villains">Villains</h3>
             <h3 id="gods">Gods of Pelagon – The Myrion</h3>
         </section>
