--- a/index.html
+++ b/index.html
@@ -66,10 +66,22 @@
         
 <section id="updates">
     <h2>Updates</h2>
+    <div class="timeline-item">
+        <div class="timeline-date">12/18/25</div>
+        <div class="timeline-content">
+            Edited and added Act V of <i>Return to Mycenae</i>.
+        </div>
+    </div>
+    <div class="timeline-item">
+        <div class="timeline-date">12/2/25</div>
+        <div class="timeline-content">
+            Edited and added Act IV of <i>Return to Mycenae</i>.
+        </div>
+    </div>
      <div class="timeline-item">
         <div class="timeline-date">11/8/25</div>
         <div class="timeline-content">
-            Edited Slave Trade section of Chapter 8: Industry. Glossed Ark Species. Expanded Qereti Codex.`
+            Edited Slave Trade section of Chapter 8: Industry. Glossed Ark Species. Expanded Qereti Codex.
         </div>
     </div>
     <div class="timeline-item">
